MODFIN-283 - Migrated to vertx future (#210)
* MODFIN-283 migrated to vertx Future