@@ -1,17 +1,12 @@
 package org.folio.rest.helper;
 
-import static java.util.stream.Collectors.toList;
+import static io.vertx.core.Future.succeededFuture;
 import static java.util.stream.Collectors.toSet;
-
 import static org.folio.rest.util.ErrorCodes.FISCAL_YEARS_NOT_FOUND;
 import static org.folio.rest.util.ErrorCodes.GROUP_NOT_FOUND;
-import static org.folio.rest.util.HelperUtils.buildQueryParam;
 import static org.folio.rest.util.HelperUtils.convertIdsToCqlQuery;
-import static org.folio.rest.util.HelperUtils.getSetDifference;
 import static org.folio.rest.util.ResourcePathResolver.FUNDS_STORAGE;
-import static org.folio.rest.util.ResourcePathResolver.FUND_TYPES;
 import static org.folio.rest.util.ResourcePathResolver.resourceByIdPath;
-import static org.folio.rest.util.ResourcePathResolver.resourcesPath;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -20,108 +15,105 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.CompletionStage;
-import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
+import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.rest.core.RestClient;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.exception.HttpException;
 import org.folio.rest.jaxrs.model.Budget;
-import org.folio.rest.jaxrs.model.BudgetsCollection;
 import org.folio.rest.jaxrs.model.CompositeFund;
 import org.folio.rest.jaxrs.model.Fund;
 import org.folio.rest.jaxrs.model.FundType;
 import org.folio.rest.jaxrs.model.FundTypesCollection;
 import org.folio.rest.jaxrs.model.GroupFundFiscalYear;
+import org.folio.services.budget.BudgetService;
+import org.folio.services.fund.FundService;
 import org.folio.services.group.GroupFundFiscalYearService;
+import org.folio.services.group.GroupService;
 import org.folio.services.ledger.LedgerDetailsService;
-import org.folio.services.ledger.LedgerService;
 import org.folio.spring.SpringContextUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import io.vertx.core.Context;
+import io.vertx.core.Future;
 import io.vertx.core.Vertx;
-import org.folio.completablefuture.FolioVertxCompletableFuture;
 import one.util.streamex.StreamEx;
 
 public class FundsHelper extends AbstractHelper {
 
-  private static final String GET_FUND_TYPES_BY_QUERY = resourcesPath(FUND_TYPES) + SEARCH_PARAMS;
-
   @Autowired
-  private RestClient budgetRestClient;
+  private RestClient restClient;
   @Autowired
   private GroupFundFiscalYearService groupFundFiscalYearService;
   @Autowired
-  private LedgerService ledgerService;
-  @Autowired
   private LedgerDetailsService ledgerDetailsService;
-
-  private GroupsHelper groupsHelper;
+  @Autowired
+  private FundService fundService;
+  @Autowired
+  private BudgetService budgetService;
+  @Autowired
+  private GroupService groupService;
 
   public FundsHelper(Map<String, String> okapiHeaders, Context ctx) {
     super(okapiHeaders, ctx);
-    groupsHelper = new GroupsHelper(httpClient, okapiHeaders, ctx);
     SpringContextUtil.autowireDependencies(this, Vertx.currentContext());
   }
 
-  public CompletableFuture<FundType> createFundType(FundType fundType) {
-    return handleCreateRequest(resourcesPath(FUND_TYPES), fundType).thenApply(fundType::withId);
+  public Future<FundType> createFundType(FundType fundType, RequestContext requestContext) {
+    return fundService.createFundType(fundType, requestContext);
   }
 
-  public CompletableFuture<FundTypesCollection> getFundTypes(int limit, int offset, String query) {
-    String endpoint = String.format(GET_FUND_TYPES_BY_QUERY, limit, offset, buildQueryParam(query, logger));
-    return handleGetRequest(endpoint)
-      .thenCompose(json -> FolioVertxCompletableFuture.supplyBlockingAsync(ctx, () -> json.mapTo(FundTypesCollection.class)));
+  public Future<FundTypesCollection> getFundTypes(int offset, int limit, String query, RequestContext requestContext) {
+    return fundService.getFundTypes(offset, limit, query, requestContext);
   }
 
-  public CompletableFuture<FundType> getFundType(String id) {
-    return handleGetRequest(resourceByIdPath(FUND_TYPES, id))
-      .thenApply(json -> json.mapTo(FundType.class));
+  public Future<FundType> getFundType(String id, RequestContext requestContext) {
+    return fundService.getFundTypeById(id, requestContext);
   }
 
-  public CompletableFuture<Void> updateFundType(FundType fundType) {
-    return handleUpdateRequest(resourceByIdPath(FUND_TYPES, fundType.getId()), fundType);
+  public Future<Void> updateFundType(FundType fundType, RequestContext requestContext) {
+    return fundService.updateFundType(fundType, requestContext);
   }
 
-  public CompletableFuture<Void> deleteFundType(String id) {
-    return handleDeleteRequest(resourceByIdPath(FUND_TYPES, id));
+  public Future<Void> deleteFundType(String id, RequestContext requestContext) {
+    return fundService.deleteFundType(id, requestContext);
   }
 
-  public CompletableFuture<CompositeFund> createFund(CompositeFund compositeFund) {
-    final Fund fund = compositeFund.getFund();
+  public Future<CompositeFund> createFund(CompositeFund compositeFund, RequestContext requestContext) {
     if (CollectionUtils.isNotEmpty(compositeFund.getGroupIds())) {
-      return ledgerDetailsService.getCurrentFiscalYear(fund.getLedgerId(), new RequestContext(ctx, okapiHeaders))
-        .thenCompose(fiscalYear -> {
+      return ledgerDetailsService.getCurrentFiscalYear(compositeFund.getFund().getLedgerId(), new RequestContext(ctx, okapiHeaders))
+        .compose(fiscalYear -> {
           if (Objects.isNull(fiscalYear)) {
             throw new HttpException(422, FISCAL_YEARS_NOT_FOUND);
           }
-          return handleCreateRequest(resourcesPath(FUNDS_STORAGE), fund).thenAccept(fund::setId)
-            .thenCompose(ok -> assignFundToGroups(compositeFund, fiscalYear.getId()));
+          return fundService.createFund(compositeFund.getFund(), requestContext)
+            .map(newFund -> {
+              compositeFund.getFund().withId(newFund.getId());
+              return null;
+            })
+            .compose(compFund -> assignFundToGroups(compositeFund, fiscalYear.getId()));
         })
-        .thenApply(aVoid -> compositeFund);
+        .map(aVoid -> compositeFund);
     }
-    return handleCreateRequest(resourcesPath(FUNDS_STORAGE), fund)
-      .thenApply(id -> {
-        fund.setId(id);
-        return compositeFund;
-      });
+    return fundService.createFund(compositeFund.getFund(), requestContext)
+      .map(compositeFund::withFund);
   }
 
-  private CompletableFuture<Void> assignFundToGroups(CompositeFund compositeFund, String fiscalYearId) {
+  private Future<Void> assignFundToGroups(CompositeFund compositeFund, String fiscalYearId) {
     List<GroupFundFiscalYear> groupFundFiscalYears = buildGroupFundFiscalYears(compositeFund, fiscalYearId);
-    return FolioVertxCompletableFuture.allOf(ctx, groupFundFiscalYears.stream()
+    var futures = groupFundFiscalYears.stream()
       .map(groupFundFiscalYear -> groupFundFiscalYearService.createGroupFundFiscalYear(groupFundFiscalYear, new RequestContext(ctx, okapiHeaders)))
-      .toArray(CompletableFuture[]::new));
+      .collect(Collectors.toList());
+    return GenericCompositeFuture.join(futures)
+      .mapEmpty();
   }
 
   private List<GroupFundFiscalYear> buildGroupFundFiscalYears(CompositeFund compositeFund, String budgetId, String fiscalYearId, List<String> groupIds) {
     return StreamEx.of(groupIds)
       .map(groupId -> buildGroupFundFiscalYear(compositeFund, budgetId, fiscalYearId, groupId))
-      .toList();
+      .collect(Collectors.toList());
   }
 
   private List<GroupFundFiscalYear> buildGroupFundFiscalYears(CompositeFund compositeFund, String fiscalYearId) {
@@ -135,57 +127,62 @@ public class FundsHelper extends AbstractHelper {
       .withFiscalYearId(fiscalYearId);
   }
 
-  public CompletableFuture<CompositeFund> getCompositeFund(String id) {
-    return handleGetRequest(resourceByIdPath(FUNDS_STORAGE, id))
-      .thenApply(json -> new CompositeFund().withFund(json.mapTo(Fund.class)))
-      .thenCompose(compositeFund -> ledgerDetailsService.getCurrentFiscalYear(compositeFund.getFund().getLedgerId(), new RequestContext(ctx, okapiHeaders))
-          .thenCompose(currentFY -> Objects.isNull(currentFY) ? CompletableFuture.completedFuture(null)
-              : getGroupIdsThatFundBelongs(id, currentFY.getId()))
-          .thenApply(compositeFund::withGroupIds));
+  public Future<CompositeFund> getCompositeFund(String id, RequestContext requestContext) {
+    return fundService.getFundById(id, requestContext)
+      .map(fund -> new CompositeFund().withFund(fund))
+      .compose(compositeFund -> ledgerDetailsService.getCurrentFiscalYear(compositeFund.getFund().getLedgerId(), new RequestContext(ctx, okapiHeaders))
+        .compose(currentFY -> Objects.isNull(currentFY) ? succeededFuture(null)
+          : getGroupIdsThatFundBelongs(id, currentFY.getId()))
+        .map(compositeFund::withGroupIds));
   }
 
-  public CompletableFuture<Fund> getFund(String id) {
-    return handleGetRequest(resourceByIdPath(FUNDS_STORAGE, id))
-      .thenApply(json -> json.mapTo(Fund.class));
-  }
-
-  private CompletableFuture<Void> assignFundToGroups(List<GroupFundFiscalYear> groupFundFiscalYears) {
-    return FolioVertxCompletableFuture.allOf(ctx, groupFundFiscalYears.stream()
+  private Future<Void> assignFundToGroups(List<GroupFundFiscalYear> groupFundFiscalYears) {
+    var futures = groupFundFiscalYears.stream()
       .map(groupFundFiscalYear -> groupFundFiscalYearService.createGroupFundFiscalYear(groupFundFiscalYear, new RequestContext(ctx, okapiHeaders)))
-      .toArray(CompletableFuture[]::new));
+      .collect(Collectors.toList());
+
+    return GenericCompositeFuture.join(futures)
+      .mapEmpty();
   }
 
-  private CompletableFuture<Void> unassignGroupsForFund(Collection<String> groupFundFiscalYearIds) {
-    return FolioVertxCompletableFuture.allOf(ctx, groupFundFiscalYearIds.stream()
+  private Future<Void> unassignGroupsForFund(Collection<String> groupFundFiscalYearIds) {
+    var futures = groupFundFiscalYearIds.stream()
       .map(id -> groupFundFiscalYearService.deleteGroupFundFiscalYear(id, new RequestContext(ctx, okapiHeaders)))
-      .toArray(CompletableFuture[]::new));
+      .collect(Collectors.toList());
+    return GenericCompositeFuture.join(futures)
+      .mapEmpty();
   }
 
-  private CompletionStage<List<String>> getGroupIdsThatFundBelongs(String fundId, String currentFYId) {
+  private Future<List<String>> getGroupIdsThatFundBelongs(String fundId, String currentFYId) {
     return groupFundFiscalYearService.getGroupFundFiscalYearCollection(fundId, currentFYId, new RequestContext(ctx, okapiHeaders))
-      .thenApply(groupFundFiscalYearCollection -> groupFundFiscalYearCollection.getGroupFundFiscalYears()
+      .map(groupFundFiscalYearCollection -> groupFundFiscalYearCollection.getGroupFundFiscalYears()
         .stream()
         .map(GroupFundFiscalYear::getGroupId)
-        .collect(toList()));
+        .collect(Collectors.toList())
+      );
   }
 
-  private CompletionStage<List<GroupFundFiscalYear>> getGroupFundFiscalYearsThatFundBelongs(String fundId, String currentFYId) {
+  private Future<List<GroupFundFiscalYear>> getGroupFundFiscalYearsThatFundBelongs(String fundId, String currentFYId) {
     return groupFundFiscalYearService.getGroupFundFiscalYearCollection(fundId, currentFYId, new RequestContext(ctx, okapiHeaders))
-      .thenApply(groupFundFiscalYearCollection -> new ArrayList<>(groupFundFiscalYearCollection.getGroupFundFiscalYears()));
+      .map(groupFundFiscalYearCollection -> new ArrayList<>(groupFundFiscalYearCollection.getGroupFundFiscalYears()));
   }
 
   private List<String> groupFundFiscalYearIdsForDeletion(List<GroupFundFiscalYear> groupFundFiscalYearCollection, List<String> groupIdsForDeletion) {
-    return groupFundFiscalYearCollection.stream().filter(item -> groupIdsForDeletion.contains(item.getGroupId())).map(GroupFundFiscalYear::getId).collect(toList());
+    return groupFundFiscalYearCollection
+      .stream()
+      .filter(item -> groupIdsForDeletion.contains(item.getGroupId()))
+      .map(GroupFundFiscalYear::getId)
+      .collect(Collectors.toList());
   }
 
-  private CompletionStage<Void> createGroupFundFiscalYears(CompositeFund compositeFund, String currentFiscalYearId, List<String> groupIdsForCreation) {
+  private Future<Void> createGroupFundFiscalYears(CompositeFund compositeFund, String currentFiscalYearId, List<String> groupIdsForCreation, RequestContext requestContext) {
     if(CollectionUtils.isNotEmpty(groupIdsForCreation)) {
-      return groupsHelper.getGroups(0, 0, convertIdsToCqlQuery(groupIdsForCreation))
-        .thenCompose(groupsCollection -> {
+      return groupService.getGroups(0, 0, convertIdsToCqlQuery(groupIdsForCreation), requestContext)
+        .compose(groupsCollection -> {
           if(groupsCollection.getTotalRecords() == groupIdsForCreation.size()) {
             String query = getBudgetsCollectionQuery(currentFiscalYearId, compositeFund.getFund().getId());
-            return budgetRestClient.get(query, 0, 1, new RequestContext(ctx, okapiHeaders), BudgetsCollection.class)
-                .thenCompose(budgetsCollection -> {
+            return budgetService.getBudgets(query, 0, 1, new RequestContext(ctx, okapiHeaders))
+                .compose(budgetsCollection -> {
                   List<Budget> budgets = budgetsCollection.getBudgets();
                   String budgetId = null;
                   if(!budgets.isEmpty()) {
@@ -198,73 +195,83 @@ public class FundsHelper extends AbstractHelper {
           }
         });
     } else {
-      return CompletableFuture.completedFuture(null);
+      return succeededFuture(null);
     }
   }
 
-  private CompletionStage<Void> deleteGroupFundFiscalYears(List<String> groupFundFiscalYearForDeletionIds) {
+  private Future<Void> deleteGroupFundFiscalYears(List<String> groupFundFiscalYearForDeletionIds) {
     if(CollectionUtils.isNotEmpty(groupFundFiscalYearForDeletionIds)) {
       return unassignGroupsForFund(groupFundFiscalYearForDeletionIds);
     } else {
-      return CompletableFuture.completedFuture(null);
+      return succeededFuture(null);
     }
   }
 
-  public CompletableFuture<Void> updateFund(CompositeFund compositeFund) {
-    Fund fund = compositeFund.getFund();
-    return getFund(fund.getId())
-      .thenCompose(fundFromStorage -> handleUpdateRequest(resourceByIdPath(FUNDS_STORAGE, fund.getId()), fund)
-        .thenCompose(v1 -> updateFundGroups(compositeFund)
-          .handle((v2, t) -> rollbackFundPutIfNeeded(fundFromStorage, t))
-          .thenCompose(Function.identity())
-        )
-      );
+  public Future<Void> updateFund(CompositeFund compositeFund, RequestContext requestContext) {
+    return fundService.getFundById(compositeFund.getFund().getId(), requestContext)
+      .compose(fundFromStorage -> fundService.updateFund(compositeFund.getFund(), requestContext)
+        .compose(v1 -> updateFundGroups(compositeFund, requestContext))
+        .recover(t -> rollbackFundPutIfNeeded(fundFromStorage, t, requestContext)))
+      .mapEmpty();
+
   }
 
-  private CompletableFuture<Void> updateFundGroups(CompositeFund compositeFund) {
+  private Future<Void> updateFundGroups(CompositeFund compositeFund, RequestContext requestContext) {
     Fund fund = compositeFund.getFund();
     Set<String> groupIds = new HashSet<>(compositeFund.getGroupIds());
     return ledgerDetailsService.getCurrentFiscalYear(fund.getLedgerId(), new RequestContext(ctx, okapiHeaders))
-      .thenCompose(currentFiscalYear-> {
+      .compose(currentFiscalYear-> {
         if(Objects.nonNull(currentFiscalYear)) {
           String currentFiscalYearId = currentFiscalYear.getId();
           return getGroupFundFiscalYearsThatFundBelongs(fund.getId(), currentFiscalYearId)
-            .thenCompose(groupFundFiscalYearCollection -> {
-              List<String> groupIdsFromStorage = StreamEx.of(groupFundFiscalYearCollection).map(GroupFundFiscalYear::getGroupId).toList();
-              return createGroupFundFiscalYears(compositeFund, currentFiscalYearId, getSetDifference(groupIdsFromStorage, groupIds))
-                .thenCompose(vVoid -> deleteGroupFundFiscalYears(groupFundFiscalYearIdsForDeletion(
+            .compose(groupFundFiscalYearCollection -> {
+              List<String> groupIdsFromStorage = StreamEx.of(groupFundFiscalYearCollection).map(GroupFundFiscalYear::getGroupId).collect(Collectors.toList());
+
+              return createGroupFundFiscalYears(compositeFund, currentFiscalYearId, getSetDifference(groupIdsFromStorage, groupIds), requestContext)
+                .compose(vVoid -> deleteGroupFundFiscalYears(groupFundFiscalYearIdsForDeletion(
                   groupFundFiscalYearCollection, getSetDifference(groupIds, groupIdsFromStorage))));
             });
         } else if(groupIds.isEmpty()) {
-          return CompletableFuture.completedFuture(null);
+          return succeededFuture(null);
         } else {
           throw new HttpException(422, FISCAL_YEARS_NOT_FOUND);
         }
       });
   }
 
-  private CompletableFuture<Void> rollbackFundPutIfNeeded(Fund fundFromStorage, Throwable t1) {
-    if (t1 == null) {
-      return CompletableFuture.completedFuture(null);
+  private Future<Void> rollbackFundPutIfNeeded(Fund fundFromStorage, Throwable t, RequestContext requestContext) {
+    if (t == null) {
+      return succeededFuture(null);
     }
-    return getFund(fundFromStorage.getId())
-      .thenAccept(latestFund -> fundFromStorage.setVersion(latestFund.getVersion()))
-      .thenCompose(v -> handleUpdateRequest(resourceByIdPath(FUNDS_STORAGE, fundFromStorage.getId()), fundFromStorage))
-      .handle((v2, t2) -> {
-        throw new CompletionException((t1.getCause()));
-      });
+    return fundService.getFundById(fundFromStorage.getId(), requestContext)
+      .map(latestFund -> fundFromStorage.withVersion(latestFund.getVersion()))
+      .compose(v -> restClient.put(resourceByIdPath(FUNDS_STORAGE, fundFromStorage.getId()), fundFromStorage, requestContext))
+      .recover(v -> Future.failedFuture(t))
+      .compose(v -> Future.failedFuture(t));
   }
 
   private String getBudgetsCollectionQuery(String currentFiscalYearId, String fundId) {
     return String.format("fundId=%s AND fiscalYearId=%s", fundId, currentFiscalYearId);
   }
 
-  public CompletableFuture<Void> deleteFund(String id) {
+  public Future<Void> deleteFund(String id, RequestContext requestContext) {
     String query = String.format("fundId==%s", id);
     return groupFundFiscalYearService.getGroupFundFiscalYears(query, 0, Integer.MAX_VALUE, new RequestContext(ctx, okapiHeaders))
-      .thenApply(collection -> collection.getGroupFundFiscalYears().stream().map(GroupFundFiscalYear::getId).collect(toSet()))
-      .thenCompose(this::unassignGroupsForFund)
-      .thenCompose(vVoid -> handleDeleteRequest(resourceByIdPath(FUNDS_STORAGE, id)));
+      .map(collection -> collection.getGroupFundFiscalYears().stream().map(GroupFundFiscalYear::getId).collect(toSet()))
+      .compose(this::unassignGroupsForFund)
+      .compose(vVoid -> restClient.delete(resourceByIdPath(FUNDS_STORAGE, id), requestContext));
+  }
+
+  /**
+   * This method returns the set difference of B and A - the set of elements in B but not in A
+   * @param a set A
+   * @param b set B
+   * @return the relative complement of A in B
+   */
+  public static List<String> getSetDifference(Collection<String> a, Collection<String> b) {
+    return b.stream()
+      .filter(item -> !a.contains(item))
+      .collect(Collectors.toList());
   }
 
 }
